(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/cloudsearch/service/2013-01-01/cloudsearch-2013-01-01.json)
  (:ocf %{bin:ocamlformat}))
 (targets
  builders.ml
  builders.mli
  query_serializers.ml
  query_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_CloudSearch.ml
  Smaws_Client_CloudSearch.mli)
 (mode promote)
 (action
  (progn
   (run
    %{gen}
    -input
    %{input}
    -output
    .
    -targets
    builders
    types
    service_metadata
    serializers
    deserializers
    operations
    module)
   (run
    %{ocf}
    -i
    builders.ml
    builders.mli
    query_serializers.ml
    query_deserializers.ml
    service_metadata.ml
    service_metadata.mli
    types.ml
    types.mli
    operations.ml
    operations.mli
    Smaws_Client_CloudSearch.ml
    Smaws_Client_CloudSearch.mli))))

(library
 (name Smaws_Client_CloudSearch)
 (public_name smaws-clients.cloudsearch)
 (modules
  Smaws_Client_CloudSearch
  types
  service_metadata
  query_serializers
  query_deserializers
  operations
  builders)
 (libraries smaws-lib))
