(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/cloudtrail/service/2013-11-01/cloudtrail-2013-11-01.json))
 (targets
  builders.ml
  builders.mli
  json_serializers.ml
  json_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_CloudTrail.ml
  Smaws_Client_CloudTrail.mli)
 (mode promote)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   service_metadata
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_CloudTrail)
 (public_name smaws-clients.cloudtrail)
 (modules
  Smaws_Client_CloudTrail
  types
  service_metadata
  json_serializers
  json_deserializers
  operations
  builders)
 (libraries smaws-lib))
